apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
    
  ports:
    - name: http
      protocol: TCP
      # The internal port of the service.
      port: 80
      # The port your Nginx container is listening on.
      targetPort: 80
      # This is the external port that will be opened on your Rocky Linux laptop's IP.
      nodePort: 30081
